@@ -1,4 +1,5 @@
 4.0.12
+ * Fix BulkLoader ignoring cipher suites options (CASSANDRA-18582)
  * Migrate Python optparse to argparse (CASSANDRA-17914)
 Merged from 3.11:
  * Moved jflex from runtime to build dependencies (CASSANDRA-18664)
